Fixes for find_callback(), specs, and updates to README
* README.rdoc: added missing example of how to load matchers and helpers into spec_helper
* lib/capistrano/spec.rb: moved DummyTask class inside Helpers module, fixed method name
  (was new() instead of initialize(), a mistake...).
* spec/capistrano-spec_spec.rb: added some passing specs, this gem finally has a bit of
  coverage!
* spec/spec_helper.rb: added config to load matchers and helpers.

--- a/README.rdoc
+++ b/README.rdoc
@@ -11,6 +11,11 @@ You know the drill:
 And require it in your +spec/spec_helper.rb+:
 
   require 'capistrano-spec'
+  RSpec.configure do |config|
+    config.include Capistrano::Spec::Matchers
+    config.include Capistrano::Spec::Helpers
+  end
+
 
 == Designing your capistrano extension
 
